# devopstw2022_demo_ci

./: README.md  cloudbuild.yaml  k8s-manifest.yaml  skaffold.yaml  tags.json
fastapi_demo/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
fastapi_demo/docs/: Makefile  conf.py  example.ipynb  make.bat
fastapi_demo/docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
fastapi_demo/docs/_build/doctrees/autoapi/: index.doctree
fastapi_demo/docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
fastapi_demo/docs/_build/html/_modules/: index.html
fastapi_demo/docs/_build/jupyter_execute/: example.ipynb
fastapi_demo/helm_charts/: Chart.yaml  values.yaml
fastapi_demo/helm_charts/templates/: deployment.yaml
fastapi_demo/kubernetest_manifests_artifactory/: deployment.yaml  service.yaml
fastapi_demo/kubernetest_manifests_local/: deployment.yaml
fastapi_demo/src/.scannerwork/: report-task.txt
fastapi_demo/src/.scannerwork/scanner-report/: activerules.pb  analysis-warnings.pb  component-1.pb  component-2.pb  component-3.pb  coverages-3.pb  issues-3.pb  measures-2.pb  measures-3.pb  metadata.pb  source-3.txt  symbols-2.pb  symbols-3.pb  syntax-highlightings-2.pb  syntax-highlightings-3.pb
fastapi_demo/src/fastapi_demo/: __init__.py  fastapi_demo.py
fastapi_demo/tests/: test_fastapi_demo.py
(+9 files in other folders)
