[tool.poetry]
name = "fastapi_demo"
version = "0.1.0"
description = "This is a demo example for devopstw2022."
authors = ["ABE HSU"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi = "^0.83.0"
pydantic = "^1.10.2"
uvicorn = "^0.18.3"
pandas = "^1.4.4"


[tool.poetry.dev-dependencies]


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
myst-nb = {version = "^0.16.0", python = "^3.9"}
sphinx-autoapi = "^1.9.0"
sphinx-rtd-theme = "^1.0.0"
pylint = "^2.15.2"
black = "^22.8.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
